--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:id="@+id/button"
         android:layout_width="150dp"
         android:layout_height="50dp"
+        android:onClick="cadastrar"
         android:layout_marginBottom="46dp"
         android:text="Cadastrar Novo"
         app:layout_constraintBottom_toTopOf="@+id/button2"
@@ -22,6 +23,7 @@
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:text="Listar Livros"
+        android:onClick="listar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
