--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -13,10 +13,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Autor:"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
-        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="18dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/textView6" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/textView6"
@@ -24,20 +26,23 @@
         android:layout_height="wrap_content"
         android:text="Título:"
         android:layout_marginStart="16dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
-        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginTop="33dp"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ano:"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/textView5"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
-        tools:layout_constraintBaseline_creator="1" />
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/textView8"
+        android:layout_marginStart="26dp"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/textView8"
@@ -45,63 +50,70 @@
         android:layout_height="wrap_content"
         android:text="Nota:"
         tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        android:layout_marginStart="16dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/nota" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/titulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
         tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/textView10"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="33dp"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/textView10"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/autor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/textView11"
-        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        app:layout_constraintRight_toRightOf="@+id/titulo"
+        android:layout_marginTop="18dp"
+        app:layout_constraintTop_toBottomOf="@+id/titulo"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/textView11" />
+        app:layout_constraintLeft_toLeftOf="@+id/titulo" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/ano"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
         tools:layout_constraintTop_creator="1"
-        app:layout_constraintTop_toBottomOf="@+id/textView10"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/autor"
+        android:layout_marginTop="22dp"
+        app:layout_constraintTop_toBottomOf="@+id/autor"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toRightOf="@+id/textView5" />
+        app:layout_constraintLeft_toLeftOf="@+id/autor" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/nota"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
         tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="2dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView11"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/ano"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/ano"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/textView11" />
+        app:layout_constraintLeft_toLeftOf="@+id/ano" />
 
     <Button
         android:id="@+id/button5"
+        android:onClick="anterior"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Anterior"
-        tools:layout_constraintBottom_creator="1"
         android:layout_marginStart="16dp"
+        tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="20dp"
@@ -112,10 +124,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Próximo"
+        android:onClick="proximo"
+        android:layout_marginEnd="20dp"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="20dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="20dp" />
 </android.support.constraint.ConstraintLayout>
